--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@
 (A) 2014-08-19 +MAPA @SAUL MOSTRAR MAPA EN ANIMACIÓN
 (A) 2014-08-19 +RUTA @JORGE CREAR RUTA LOGICAMENTE
 (B) 2014-08-19 +RUTA @JORGE MOSTRAR RUTA EN ANIMACIÓN
+(C) 2014-08-20 +GUI @SAUL AGREGAR FPS
