Avances al cargar mapa

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
-(A) 2014-08-19 +MAPA @SAUL MOSTRAR MAPA EN ANIMACIÓN
 (A) 2014-08-19 +RUTA @JORGE CREAR RUTA LOGICAMENTE
 (B) 2014-08-19 +RUTA @JORGE MOSTRAR RUTA EN ANIMACIÓN
 x 2014-08-22 (A) 2014-08-19 +MAPA @SAUL CARGAR MAPA
+x 2014-08-22 (A) 2014-08-19 +MAPA @SAUL MOSTRAR MAPA EN ANIMACIÓN
 x 2014-08-22 (C) 2014-08-20 +GUI @SAUL AGREGAR FPS
