Agregado manejo del trazo

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,8 @@
 (A) 2014-08-19 +RUTA @JORGE CREAR RUTA LOGICAMENTE
 (B) 2014-08-19 +RUTA @JORGE MOSTRAR RUTA EN ANIMACIÓN
+(B) 2014-08-25 +ANIMACION @SAUL AGREGAR CAMPO POSICION DEL OBJETIVO EN PANEL CONTROL (Y CON RATON)
+(B) 2014-08-25 +ANIMACION @SAUL AGREGAR CAMPO ACTUALIZACIONES POR SEGUNDO DE POSICION PANEL ANIMACION
+(B) 2014-08-25 +ANIMACION @SAUL AGREGAR CAMPO POSICION INICIAL DEL ROBOT EN PANEL CONTROL (Y CON RATON)
 x 2014-08-22 (A) 2014-08-19 +MAPA @SAUL CARGAR MAPA
 x 2014-08-22 (A) 2014-08-19 +MAPA @SAUL MOSTRAR MAPA EN ANIMACIÓN
 x 2014-08-22 (C) 2014-08-20 +GUI @SAUL AGREGAR FPS
