--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,8 @@
+(A) 2014-08-25 +ANIMACION @SAUL QUE SE MUESTRE EL ROBOT EN LA ANIMACION Y SU POSICION 
+(A) 2014-08-25 +ANIMACION @SAUL AGREGAR CAMPO ACTUALIZACIONES POR SEGUNDO DE POSICION PANEL ANIMACION
 (A) 2014-08-19 +RUTA @JORGE CREAR RUTA LOGICAMENTE
 (B) 2014-08-19 +RUTA @JORGE MOSTRAR RUTA EN ANIMACIÓN
 (B) 2014-08-25 +ANIMACION @SAUL AGREGAR CAMPO POSICION DEL OBJETIVO EN PANEL CONTROL (Y CON RATON)
-(B) 2014-08-25 +ANIMACION @SAUL AGREGAR CAMPO ACTUALIZACIONES POR SEGUNDO DE POSICION PANEL ANIMACION
 (B) 2014-08-25 +ANIMACION @SAUL AGREGAR CAMPO POSICION INICIAL DEL ROBOT EN PANEL CONTROL (Y CON RATON)
 x 2014-08-22 (A) 2014-08-19 +MAPA @SAUL CARGAR MAPA
 x 2014-08-22 (A) 2014-08-19 +MAPA @SAUL MOSTRAR MAPA EN ANIMACIÓN
