--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
-(A) 2014-10-08 +ANIMACION @SAUL AGREGAR Z INDEX AL AGREGAR ANIMABLE
-(B) 2014-08-25 +ANIMACION @SAUL AGREGAR CAMPO POSICION DEL OBJETIVO EN PANEL CONTROL (Y CON RATON)
-(B) 2014-08-25 +ANIMACION @SAUL AGREGAR CAMPO POSICION INICIAL DEL ROBOT EN PANEL CONTROL (Y CON RATON)
+x 2014-10-12 (A) 2014-10-08 +ANIMACION @SAUL AGREGAR Z INDEX AL AGREGAR ANIMABLE
+x 2014-10-12 (B) 2014-08-25 +ANIMACION @SAUL AGREGAR CAMPO POSICION DEL OBJETIVO EN PANEL CONTROL (Y CON RATON)
+x 2014-10-12 (B) 2014-08-25 +ANIMACION @SAUL AGREGAR CAMPO POSICION INICIAL DEL ROBOT EN PANEL CONTROL (Y CON RATON)
 x 2014-08-22 (A) 2014-08-19 +MAPA @SAUL CARGAR MAPA
 x 2014-08-22 (A) 2014-08-19 +MAPA @SAUL MOSTRAR MAPA EN ANIMACIÓN
 x 2014-08-22 (C) 2014-08-20 +GUI @SAUL AGREGAR FPS
