--- a/others/paper/articulo.tex
+++ b/others/paper/articulo.tex
@@ -156,11 +156,17 @@ Cuerpo del abstract
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\pagebreak
 
-\section*{Introducci\'on }
+\section*{Introducción }
 
 \section*{Pioneer P3DX}
 
-Caracteristicas del robot
+\begin{figure}[here]
+\begin{center}
+\includegraphics[width=6cm]{pioneer.png} 
+\caption{Robot Pioneer P3DX}
+\label{fig:pioneer}
+\end{center}
+\end{figure} 
 
 \section*{Arquitectura AuRA}
 
@@ -172,15 +178,26 @@ Explicar como se programo el Aura
 
 \section*{Entorno de Desarrollo}
 
+La herramienta desarrollada 
+
 Explicar las herramientas usadas, aria, mobilesim, eclipse, java, windows
 
-\subsection*{Configuración del Entorno}
+\section*{Configuración del Entorno}
 
-Instrucciones para instalar todo
+La herramienta de software se creo usando tecnología multiplataforma, por ende 
+el entorno de desarrollo se puede configurar en sistemas operativos Windows o Linux.
 
-\subsection*{Herramienta de Software Desarrollada}
 
-Manual del software, y la estructura de los mapas
+
+Instrucciones para instalar todo \url{https://bitbucket.org/sauljabin/ariajava-p3dx}
+
+\section*{Herramienta de Software Desarrollada}
+
+
+
+\section*{Experimentación}
+
+Explicar los experimentos realizados
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                 BIBLIOGRAFIA
